# dr_cli

./: CLAUDE.md  README.md  pyproject.toml
docs/: information-distribution-approach.md  jsonl-output-combined-plan.md  mypy-reference.md  parallel_lint_fixes.md  parser-implementation-plan.md  parser-implementation-reflections.md  parser-testing-plan.md  parsing-patterns-reference.md  regex-reference.md  testing-implementation-plan.md
docs/completed-plans/: jsonl-output-combined-plan-retrospective.md  jsonl-output-combined-plan.md  jsonl-output-implementation-plan.md  jsonl-output-testing-plan.md  parser-implementation-retrospective.md  parser-testing-plan-completed.md  testing-implementation-plan.md
scripts/: typecheck.py
src/dr_cli/: __init__.py
src/dr_cli/typecheck/: __init__.py  __main__.py  checker.py  cli.py  formatters.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_formatters.py  test_integration.py  test_models.py  test_parser_integration.py  test_parser_methods.py  test_parser_regex.py  test_parser_utils.py
tests/fixtures/: mypy_output_samples.py
tests/fixtures/sample_code/: __init__.py  error_with_notes.py  multiple_errors.py  overload_error.py  simple_error.py  warnings_only.py
tests/fixtures/sample_code/multi_file_project/: __init__.py  file_a.py  file_b.py
