[project]
name = "dr-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
    "tomlkit>=0.12.0",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0",      # Coverage reports
    "pytest-xdist>=3.0",    # Parallel execution
    "pytest-timeout>=2.0",  # Timeout long-running tests
    "pytest-mock>=3.0",     # Better mocking
    "pytest-benchmark>=4.0", # Performance benchmarking
]
test-ml = [
    "pytest-pytorch>=0.2",   # PyTorch test utilities
    "pytest-randomly>=3.0",  # Randomize test order
]

all = [
    {include-group = "dev"},
    {include-group = "test"},
]

[tool.ruff]
line-length = 88
cache-dir = ".ruff_cache"
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
exclude = ["outputs/*", "notebooks/*"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
extend-select = [
    "F", "E", "W",          # core
    "B", "FBT003",          # bugbear criticals
    "ARG", "ANN",           # api clarity
    "C4", "C90",            # perf / complexity
    "D1", "D401",           # missing docstrings + “imperative mood”
    "NPY", "PD", "PERF",    # data-science-specific
    "PIE", "SIM",           # silent foot-guns
    "PT", "TCH", "TID",     # pytest & typing hygiene
    "RUF", "UP", "S",       # upgrades, security
    "ERA",                  # commented out code
    "PLE", "PLR", "PLW",    # complexity
    "ICN001",               # import shortnames
]
ignore = [
    "ARG001",               # callbacks
    "ANN401",               # `Any` is pragmatic in tensors
    "S101",                 # asserts for invariants
    "FBT001", "FBT002",     # bool kwargs common
    "TD002", "TD003",       # lightweight TODOs fine
    "COM812", "ISC001",     # Overlap with each other in formatting
    "ICN002", "ICN003",     # import rules that are overly restrictive
    "PLR0913",              # Too many args, rough with ML code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",                  # unused arguments in fixtures
    "PLR2004",              # Magic values are OK in tests
]
"scripts/**/*.py" = [
    "T201",                 # print() is fine in scripts
]
"*_notebook.py" = [
    "E402",                 # Import order OK in notebooks
    "F401",                 # Unused imports OK in notebooks
]
"**/__init__.py" = [
    "D104",                 # Missing docstring in public package
    "D103",                 # Missing docstring in public function
]  

[tool.ruff.lint.mccabe]
max-complexity = 15         # Higher threshold for ML

[tool.ruff.lint.pydocstyle]
convention = "google"       # Accepts: "google", "numpy", or "pep257".
ignore-decorators = ["typing.overload", "typing.override"]

[tool.ruff.lint.pylint]
max-args            = 8     # allow up to 8 params before PLR0913 fires
max-branches        = 20    # PLR0912
max-statements      = 80    # PLR0915
max-nested-blocks   = 8     # PLR1702
max-returns         = 10    # PLR0911

[tool.ruff.lint.flake8-import-conventions.aliases]
numpy               = "np"
"numpy.typing"      = "npt"
pandas              = "pd"
"matplotlib.pyplot" = "plt"
seaborn             = "sns"
"dask.dataframe"    = "dd"
polars              = "pl"
lightning			= "L"
"jax.numpy" 	    = "jnp"

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
explicit_package_bases = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing imports for libraries without type stubs
ignore_missing_imports = true

# Performance
cache_dir = ".mypy_cache"
show_error_codes = true


[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Logging (disabled by default for clean test output)
# Enable with: pytest --log-cli-level=INFO
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Warnings
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

addopts = [
    "--strict-config",
    "--strict-markers",
    "--verbose",
    "-ra",  # show all test outcome reasons
    "-n", "auto",
]

# Fail on unregistered markers
markers = [
    "slow: marks tests as slow",
    "serial: marks tests that must run serially",
    "integration: marks integration tests",
]

[tool.coverage.report]
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@profile",  # Line profiler decorators
    "if _debug:",  # Debug-only code
    "if _profile:",  # Profiling-only code

    # ML-specific exclusions
    "if torch.cuda.is_available()",  # GPU-specific code
    "@torch.no_grad()",  # Inference-only code
    "if __name__ == .__main__.:",  # Script entry points
    "def visualize",  # Visualization/debugging functions
    "except KeyboardInterrupt:",  # User interruption handlers
    "@torch.jit.script",  # JIT compiled code
    "@torch.jit.export",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",  # Standalone scripts
    "notebooks/*",  # Jupyter notebooks
    "*/__init__.py",  # Empty init files
    "*/config.py",  # Configuration files
]
